[package]
name = "alice_os"
version = "0.1.0"
authors = ["Tiago Deliberali <tiago.deliberali@gmail.com>"]
edition = "2018"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-timeout = 300 # (in seconds)
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", 
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33 

[dependencies]
bootloader = "0.9.2"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.10.2"
uart_16550 = "0.2.5"